--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,4 @@ VITE_API_BASE_URL=http://localhost:7000
 VITE_AUTH0_DOMAIN=dev-c64mplnwiah6rike.us.auth0.com
 VITE_AUTH0_CLIENT_ID=7xrIJCyFgFpTlEKKU1vA12iEyMq1unwF
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
-VITE_AUTH0_AUDIENCE=xx-xxxx-xxx-api
+VITE_AUTH0_AUDIENCE= foodie-backend
